// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/advanced_create_post Show tutorial 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={true}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot for center textbox 1`] = `
<form
  className="center"
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot when cannot post 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={false}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot when file upload disabled 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, can post; preview disabled 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, can post; preview enabled 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, cannot post; preview disabled 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={false}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, cannot post; preview enabled 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={false}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, init 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, post priority disabled, with priority important 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={Array []}
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "metadata": Object {
          "priority": Object {
            "priority": "important",
          },
        },
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, post priority enabled 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={
      Array [
        <Memo(PostPriorityPickerOverlay)
          disabled={false}
          onApply={[Function]}
          onClose={[Function]}
        />,
      ]
    }
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;

exports[`components/advanced_create_post should match snapshot, post priority enabled, with priority important 1`] = `
<form
  className=""
  data-testid="create-post"
  id="create_post"
  onSubmit={[Function]}
>
  <AdvanceTextEditor
    additionalControls={
      Array [
        <Memo(PostPriorityPickerOverlay)
          disabled={false}
          onApply={[Function]}
          onClose={[Function]}
          settings={
            Object {
              "priority": "important",
            }
          }
        />,
      ]
    }
    applyMarkdown={[Function]}
    badConnection={false}
    canPost={true}
    canUploadFiles={false}
    caretPosition={0}
    channelId="owsyt8n43jfxjpzh9np93mx1wa"
    ctrlSend={false}
    currentChannel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "owsyt8n43jfxjpzh9np93mx1wa",
        "last_post_at": 0,
        "last_root_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    currentUserId="zaktnt8bpbgu8mb6ez9k64r7sa"
    disableSend={false}
    draft={
      Object {
        "channelId": "",
        "createAt": 0,
        "fileInfos": Array [],
        "message": "",
        "metadata": Object {
          "priority": Object {
            "priority": "important",
          },
        },
        "rootId": "",
        "updateAt": 0,
        "uploadsInProgress": Array [],
      }
    }
    emitTypingEvent={[Function]}
    enableEmojiPicker={true}
    enableGifPicker={true}
    errorClass={null}
    fileUploadRef={
      Object {
        "current": null,
      }
    }
    getFileUploadTarget={[Function]}
    handleBlur={[Function]}
    handleChange={[Function]}
    handleEmojiClick={[Function]}
    handleFileUploadChange={[Function]}
    handleFileUploadComplete={[Function]}
    handleGifClick={[Function]}
    handleMouseUpKeyUp={[Function]}
    handlePostError={[Function]}
    handleSubmit={[Function]}
    handleUploadError={[Function]}
    handleUploadProgress={[Function]}
    handleUploadStart={[Function]}
    hideEmojiPicker={[Function]}
    isFormattingBarHidden={false}
    labels={
      <Memo(PriorityLabels)
        canRemove={true}
        hasError={false}
        onRemove={[Function]}
        priority="important"
        specialMentions={
          Object {
            "all": false,
            "channel": false,
            "here": false,
          }
        }
      />
    }
    loadNextMessage={[Function]}
    loadPrevMessage={[Function]}
    location="CENTER"
    maxPostSize={4000}
    message=""
    onEditLatestPost={[Function]}
    onMessageChange={[Function]}
    postId=""
    postMsgKeyPress={[Function]}
    prefillMessage={[Function]}
    removePreview={[Function]}
    replyToLastPost={[Function]}
    serverError={null}
    setShowPreview={[Function]}
    shouldShowPreview={false}
    showEmojiPicker={false}
    showSendTutorialTip={false}
    textboxRef={
      Object {
        "current": null,
      }
    }
    toggleAdvanceTextEditor={[Function]}
    toggleEmojiPicker={[Function]}
    uploadsProgressPercent={Object {}}
    useChannelMentions={true}
  />
</form>
`;
